real fast refactor, had a vision :3